examples/shuffle-shard/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service-http
                  hash_policy:
                    header: 
                      header_name: charlie
          http_filters:
          - name: envoy.filters.http.router

  clusters:
  - name: service-http
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: maglev
    common_lb_config:
      consistent_hashing_lb_config:
        use_hostname_for_hashing: true
        shard_size: 3
        lb_policy: random
    health_checks:
    - timeout: 1s
      interval: 5s
      interval_jitter: 1s
      unhealthy_threshold: 1
      healthy_threshold: 3
      http_health_check:
        host: "servicehost"
        path: "/health"

    load_assignment:
      cluster_name: service-http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8001
          metadata:
            filter_metadata:
              envoy.lb:
                region: us-east-1
                az: a
        - endpoint:
            health_check_config:
              port_value: 8002
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8002
          metadata:
            filter_metadata:
              envoy.lb:
                region: us-east-1
                az: b
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8003
          metadata:
            filter_metadata:
              envoy.lb:
                region: us-east-2
                az: c
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8004
